CAUSEWAY-3873: fixes invalid PlantUML syntax (AsciiDoc builder)